--- a/hookService/package.json
+++ b/hookService/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hookservice",
+  "name": "webhook",
   "version": "1.0.0",
   "description": "te",
   "main": "index.js",
@@ -8,7 +8,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "stsdt",
   "license": "ISC",
